update Trixi and presentation

--- a/Talk.ipynb
+++ b/Talk.ipynb
@@ -10,16 +10,20 @@
    "source": [
     "# Introduction to Julia and Trixi, a numerical simulation framework for hyperbolic PDEs\n",
     "\n",
+    "[Julia](https://julialang.org) is a modern high-level programming language developed specifically with scientific computing in mind. [Trixi.jl](https://github.com/trixi-framework/Trixi.jl) is a numerical simulation framework for hyperbolic conservation laws written in Julia. A key objective for the framework is to be useful to both scientists and students. Therefore, next to having an extensible design with a fast implementation, Trixi is focused on being easy to use for new or inexperienced users, including the installation and postprocessing procedures.\n",
+    "\n",
+    "This presentation is a live demonstration of Julia and Trixi. Firstly, we introduce Julia and demonstrate some of its design principles. This introduction is aimed at researchers in numerical analysis with previous programming experience. Next, we show how to use Trixi for setting up and running simulations, how to visualize the results, and how to extend Trixi with new functionality. We demonstrate how key design principles of Julia are used in Trixi and the Julia package ecosystem, e.g. to enable automatic differentiation through a complete simulation involving hyperbolic conservation laws.\n",
+    "\n",
+    "The presentation is available as a Jupyter notebook at https://github.com/trixi-framework/talk-2021-Introduction_to_Julia_and_Trixi, including information how to set up everything. For more information about Trixi and how to use it, please visit [Trixi on GitHub](https://github.com/trixi-framework/Trixi.jl) or refer to the [official documentation](https://trixi-framework.github.io/Trixi.jl/stable/). \n",
+    "\n",
+    "This notebook was set up and tested with Julia v1.6.0 but may also work with other (newer) versions.\n",
+    "\n",
+    "*Note:* If you change a variable in a later cell and then re-execute an earlier cell, the results might change unexpectedly. Thus if in doubt, re-run the entire notebook *in order*. The reason is that all cells in a Jupyter notebooks share a common variable space.\n",
+    "\n",
     "This material is distributed by Hendrik Ranocha under the MIT license. It is inspired by and partially derived from the talks\n",
     "- [Stefan Karpinski (2019), The unreasonable effectiveness of multiple dispatch](https://www.youtube.com/watch?v=kc9HwsxE1OY)\n",
     "- [Robin Deits (2020), Intro to Julia Programming Language with Detroit Tech Watch](https://www.youtube.com/watch?v=qLO-yaUkLKE) \n",
-    "- [Michael Schlottke-Lakemper (2021), Julia for adaptive high-order multi-physics simulations](https://github.com/trixi-framework/talk-2021-julia-adaptive-multi-physics-simulations)\n",
-    "\n",
-    "[Trixi.jl](https://github.com/trixi-framework/Trixi.jl) is a numerical simulation framework for hyperbolic conservation laws written in [Julia](https://julialang.org). A key objective for the framework is to be useful to both scientists and students. Therefore, next to having an extensible design with a fast implementation, Trixi is focused on being easy to use for new or inexperienced users, including the installation and postprocessing procedures.\n",
-    "\n",
-    "The primary goal of this notebook is to provide a live demonstration of Julia and Trixi. Firstly, we introduce Julia and demonstrate some of its design principles. Next, we show how to use Trixi for setting up and running simulations, how to visualize the results, and how to extend Trixi with new functionality. The notebook and a description of how to run it with Jupyter are available at https://github.com/trixi-framework/talk-2021-Introduction_to_Julia_and_Trixi. For more information about Trixi and how to use it, please visit Trixi on [GitHub](https://github.com/trixi-framework/Trixi.jl) or refer to the [official documentation](https://trixi-framework.github.io/Trixi.jl/stable/). This notebook was set up and tested with Julia v1.6.0 but may also work with other (newer) versions.\n",
-    "\n",
-    "*Note:* If you change a variable in a later cell and then re-execute an earlier cell, the results might change unexpectedly. Thus if in doubt, re-run the entire notebook *in order*. The reason is that all cells in a Jupyter notebooks share a common variable space."
+    "- [Michael Schlottke-Lakemper (2021), Julia for adaptive high-order multi-physics simulations](https://github.com/trixi-framework/talk-2021-julia-adaptive-multi-physics-simulations)"
    ]
   },
   {
@@ -73,14 +77,17 @@
     }
    },
    "source": [
+    "<img src=\"media/titlepage.png\" width=\"100%\">\n",
+    "\n",
+    "<!-- \n",
     "# Introduction to Julia and Trixi, a numerical simulation framework for hyperbolic PDEs\n",
     "\n",
     "## Hendrik Ranocha \n",
-    "\n",
+    " -->\n",
+    " \n",
     "- [ranocha.de](https://ranocha.de)\n",
-    "- [github.com/ranocha](https://github.com/ranocha)\n",
     "- Follow along at https://github.com/trixi-framework/talk-2021-Introduction_to_Julia_and_Trixi\n",
-    "- Binder: TODO"
+    "- Launch MyBinder at https://tinyurl.com/fb2fw3hr"
    ]
   },
   {
@@ -112,13 +119,16 @@
     "# Introduction to Julia\n",
     "\n",
     "- [julialang.org](https://julialang.org)\n",
-    "- Julia is a high-level language like Python with the performance of a fast language like C\n",
+    "- Julia is a high-level language like Python/Matlab with the performance of a fast language like C\n",
     "- Julia is designed for scientific computing...\n",
     "  - N-dimensional arrays\n",
     "  - Reproducibility\n",
     "- ...and valuable for general programming\n",
     "  - Growing ecosystem of packages\n",
-    "  - Rich type system"
+    "  - Rich type system\n",
+    "- Encourages good software development practices\n",
+    "  - Based on GitHub\n",
+    "  - Tests, CI"
    ]
   },
   {
@@ -146,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -199,6 +209,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Unicode"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -208,9 +229,25 @@
    },
    "outputs": [],
    "source": [
-    "# Unicode\n",
     "β = π / 4\n",
     "tan(β) ≈ sin(β) / cos(β)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using LinearAlgebra, Plots, LaTeXStrings\n",
+    "n = 1_000\n",
+    "λ = eigvals(randn(n, n))\n",
+    "scatter(real(λ), imag(λ), aspect_ratio=:equal, legend=nothing,\n",
+    "        xguide=L\"\\operatorname{Re} \\lambda\", yguide=L\"\\operatorname{Im} \\lambda\")"
    ]
   },
   {
@@ -272,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -381,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -425,7 +462,7 @@
     }
    },
    "source": [
-    "Currently there is only one greet() function, and it will work on x and y of any type:"
+    "Currently there is only one greet() function, and it will work on `x` and `y` of any type:"
    ]
   },
   {
@@ -434,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greet([1, 2, 3], \"hello world\")"
+    "greet(π, \"Münster\")"
    ]
   },
   {
@@ -651,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -784,7 +821,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1302,7 +1339,7 @@
    "outputs": [],
    "source": [
     "py_math = pyimport(\"math\")\n",
-    "py_math.sin(π)"
+    "py_math.sin.([0, π/2, π])"
    ]
   },
   {
@@ -1450,7 +1487,7 @@
    },
    "outputs": [],
    "source": [
-    "@code_native my_fast_sum(points)"
+    "@code_native debuginfo=:none my_fast_sum(points)"
    ]
   },
   {
@@ -1588,7 +1625,7 @@
     }
    },
    "source": [
-    "### Types are Values\n",
+    "### Types are values\n",
     "\n",
     "Types can also be passed around as values and bound to variables with no special rules. This makes implementing factories or constructors easy:"
    ]
@@ -1642,7 +1679,7 @@
     }
    },
    "source": [
-    "### Expressions are Values\n",
+    "### Expressions are values\n",
     "\n",
     "Even the expressions that representing Julia code are represented as values in Julia. You can create an expression with the `:()` operator, and you can inspect it just like any other object. "
    ]
@@ -1869,12 +1906,10 @@
    "source": [
     "# What's hard to do in Julia?\n",
     "\n",
-    "What is the compiler team working on making better? https://discourse.julialang.org/t/compiler-work-priorities/17623\n",
+    "- What is the compiler team working on making better?\n",
+    "- What are some subtle problems that the Julia team would like to fix?\n",
     "\n",
-    "What are some subtle problems that the Julia team would like to fix?\n",
-    "\n",
-    "[![What's bad about Julia talk](img/bad_about_julia.png)](https://www.youtube.com/watch?v=TPuJsgyu87U)\n",
-    "\n"
+    "[![What's bad about Julia talk](img/bad_about_julia.png)](https://www.youtube.com/watch?v=TPuJsgyu87U)"
    ]
   },
   {
@@ -1887,9 +1922,10 @@
    "source": [
     "## Compiler latency\n",
     "\n",
-    "* The JIT compiler runs each time it sees a function being called with a new input type\n",
-    "* That makes the first call to every function slow, since you have to wait for the JIT\n",
-    "  * This makes Julia awkward to use for things like shell scripts or AWS lambda"
+    "- The JIT compiler runs each time it sees a function being called with a new input type\n",
+    "- That makes the first call slow, since you have to wait for the JIT\n",
+    "  - This makes Julia awkward for things like shell scripts or AWS lambda\n",
+    "- The compiler is essentially serial"
    ]
   },
   {
@@ -1933,6 +1969,7 @@
     "## HPC for simulation science (in contrast to data science)\n",
     "\n",
     "- The ecosystem for traditional HPC frameworks needs to be advanced\n",
+    "- Binaries (depending on MPI) must still be configured manually\n",
     "- Some momemtum comes from the [CliMA project at CalTech](https://clima.caltech.edu/)"
    ]
   },
@@ -1946,8 +1983,8 @@
    "source": [
     "## Embedded computing\n",
     "\n",
-    "* It can be hard to run Julia on memory-limited systems, since you need the compiler living alongside your code\n",
-    "* Static compilation can help, but this isn't a well-developed workflow yet"
+    "- It can be hard to run Julia on memory-limited systems, since you need the compiler living alongside your code\n",
+    "- Static compilation can help, but this isn't a well-developed workflow yet"
    ]
   },
   {
@@ -2188,8 +2225,17 @@
    "source": [
     "# Solving hyperbolic PDEs with Trixi\n",
     "\n",
-    "Let's have a look at a simple 2D example.\n",
-    "\n",
+    "Let's have a look at a simple 2D example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "`trixi_include(...)` is a function that loads a Julia file and executes its contents. We call such files that contain a valid Trixi setup **elixirs**. `default_example()` is part of the Trixi package and returns the path to an example elixir for running a 2D linear advection simulation.\n",
     "\n",
     "**Please note that during the first invocation this may take a minute or two, since Julia has to compile all functions at first usage.**"
@@ -2262,12 +2308,12 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "source": [
     "<div align=\"center\">\n",
-    "  <img src=\"https://github.com/trixi-framework/talk-2021-Introduction_to_Julia_and_Trixi/raw/main/media/callbacks_AMR.png\" width=\"80%\" />\n",
+    "  <img src=\"https://github.com/trixi-framework/talk-2021-Introduction_to_Julia_and_Trixi/raw/main/media/components.png\" width=\"80%\" />\n",
     "</div>"
    ]
   },
@@ -2409,11 +2455,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "### Using a different initial condition"
+    "## Using a different initial condition"
    ]
   },
   {
@@ -2487,11 +2533,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "### Adaptive mesh refinement"
+    "## Adaptive mesh refinement"
    ]
   },
   {
@@ -2510,7 +2556,7 @@
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "  <img src=\"https://github.com/trixi-framework/talk-2021-Introduction_to_Julia_and_Trixi/raw/main/media/components.png\" width=\"80%\" />\n",
+    "  <img src=\"https://github.com/trixi-framework/talk-2021-Introduction_to_Julia_and_Trixi/raw/main/media/callbacks_AMR.png\" width=\"80%\" />\n",
     "</div>"
    ]
   },
@@ -2614,11 +2660,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "## Advanced usage"
+    "# Advanced usage"
    ]
   },
   {
@@ -2636,7 +2682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyzing the solution"
+    "## Analyzing the solution"
    ]
   },
   {
@@ -2703,7 +2749,7 @@
     }
    },
    "source": [
-    "### Running convergence tests"
+    "## Running convergence tests"
    ]
   },
   {
@@ -2737,7 +2783,7 @@
     }
    },
    "source": [
-    "### Visualizing the spectrum"
+    "## Visualizing the spectrum"
    ]
   },
   {
@@ -2764,7 +2810,7 @@
     "A, b = linear_structure(semi)\n",
     "\n",
     "# Compute eigenvalues\n",
-    "using LinearAlgebra # Contains `eigvals` to compute the eigenvalues (part of Julia)\n",
+    "using LinearAlgebra\n",
     "λ = eigvals(Matrix(A))\n",
     "\n",
     "# Plot eigenvalues in complex plane\n",
@@ -2813,7 +2859,7 @@
     }
    },
    "source": [
-    "### Differentiating through a complete simulation\n",
+    "## Differentiating through a complete simulation\n",
     "\n",
     "More details can be found in the [documentation of Trixi](https://trixi-framework.github.io/Trixi.jl)."
    ]
@@ -2827,19 +2873,19 @@
     "using ForwardDiff\n",
     "\n",
     "function energy_at_final_time(k) # k is the wave number of the initial condition\n",
-    "       equations = LinearScalarAdvectionEquation2D(1.0, -0.3)\n",
-    "       mesh = TreeMesh((-1.0, -1.0), (1.0, 1.0), initial_refinement_level=3, n_cells_max=10^4)\n",
-    "       solver = DGSEM(3, flux_lax_friedrichs)\n",
-    "       initial_condition = (x, t, equation) -> begin\n",
-    "           x_trans = Trixi.x_trans_periodic_2d(x - equation.advectionvelocity * t)\n",
-    "           return SVector(sinpi(k * sum(x_trans)))\n",
-    "       end\n",
-    "       semi = SemidiscretizationHyperbolic(mesh, equations, initial_condition, solver,\n",
-    "                                           uEltype=typeof(k))\n",
-    "       ode = semidiscretize(semi, (0.0, 1.0))\n",
-    "       sol = solve(ode, BS3(), save_everystep=false)\n",
-    "       Trixi.integrate(energy_total, sol.u[end], semi)\n",
+    "   equations = LinearScalarAdvectionEquation2D(1.0, -0.3)\n",
+    "   mesh = TreeMesh((-1.0, -1.0), (1.0, 1.0), initial_refinement_level=3, n_cells_max=10^4)\n",
+    "   solver = DGSEM(3, flux_lax_friedrichs)\n",
+    "   initial_condition = (x, t, equation) -> begin\n",
+    "       x_trans = Trixi.x_trans_periodic_2d(x - equation.advectionvelocity * t)\n",
+    "       return SVector(sinpi(k * sum(x_trans)))\n",
     "   end\n",
+    "   semi = SemidiscretizationHyperbolic(mesh, equations, initial_condition, solver,\n",
+    "                                       uEltype=typeof(k))\n",
+    "   ode = semidiscretize(semi, (0.0, 1.0))\n",
+    "   sol = solve(ode, BS3(), save_everystep=false)\n",
+    "   Trixi.integrate(energy_total, sol.u[end], semi)\n",
+    "end\n",
     "\n",
     "k_values = range(0.9, 1.1, length=101)"
    ]
@@ -2855,7 +2901,8 @@
    "outputs": [],
    "source": [
     "energy_values = energy_at_final_time.(k_values)\n",
-    "plot(k_values, energy_values .- maximum(energy_values), label=\"Energy\")"
+    "plot(k_values, energy_values .- maximum(energy_values), \n",
+    "     xguide=L\"k\", label=\"Relative energy\")"
    ]
   },
   {
