--- a/Talk.ipynb
+++ b/Talk.ipynb
@@ -20,6 +20,8 @@
     "\n",
     "*Note:* If you change a variable in a later cell and then re-execute an earlier cell, the results might change unexpectedly. Thus if in doubt, re-run the entire notebook *in order*. The reason is that all cells in a Jupyter notebooks share a common variable space.\n",
     "\n",
+    "*Note:* This notebook is tested using Chromium. Most parts should also work for other browsers such as Firefox, but the videos used in the last demonstrations might not be displayed correctly.\n",
+    "\n",
     "This material is distributed by Hendrik Ranocha under the MIT license. It is inspired by and partially derived from the talks\n",
     "- [Stefan Karpinski (2019), The unreasonable effectiveness of multiple dispatch](https://www.youtube.com/watch?v=kc9HwsxE1OY)\n",
     "- [Robin Deits (2020), Intro to Julia Programming Language with Detroit Tech Watch](https://www.youtube.com/watch?v=qLO-yaUkLKE) \n",
@@ -67,6 +69,33 @@
    "source": [
     "# Remove the margins when displayed as Jupyter notebook\n",
     "# display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Display mp4 videos used in the demos\n",
+    "\n",
+    "using Base64\n",
+    "\n",
+    "function display_mp4(filename; relative_width=100, loop=true)\n",
+    "    loop_statement = loop ? \" loop\" : \"\"\n",
+    "    display(\"text/html\", string(\n",
+    "    \"\"\"\n",
+    "        <video autoplay controls width=\"$(relative_width)%\"$(loop_statement)>\n",
+    "            <source src=\"data:video/x-m4v;base64,\"\"\",\n",
+    "            base64encode(open(read,filename)),\n",
+    "        \"\"\"\" type=\"video/mp4\">\n",
+    "        </video>\n",
+    "    \"\"\"))\n",
+    "end"
    ]
   },
   {
@@ -3005,7 +3034,7 @@
     }
    },
    "source": [
-    "## Demo: Self-gravitating Sedov blast wave with adaptive mesh refinement\n",
+    "## Demo: Self-gravitating Sedov blast wave\n",
     "\n",
     "Find details in [our paper](https://arxiv.org/abs/2008.10593)\n",
     "and at the [reproducibility repository](https://github.com/trixi-framework/paper-self-gravitating-gas-dynamics).\n",
@@ -3017,9 +3046,58 @@
     "        alt=\"Simulation of self-gravitating Sedov blast wave with adaptive mesh refinement.\"/>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Demo: MHD blast wave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display_mp4(\"media/mhd_blast_wave.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Demo: Kelvin-Helmholtz instability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display_mp4(\"media/kelvin_helmholtz_instability.mp4\")"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Julia 1.6.0",
    "language": "julia",
