a bit more on Trixi

--- a/Talk.ipynb
+++ b/Talk.ipynb
@@ -148,7 +148,7 @@
     "# Introduction to Julia\n",
     "\n",
     "- [julialang.org](https://julialang.org)\n",
-    "- Julia is a high-level language like Python/Matlab with the performance of a fast language like C\n",
+    "- Julia is a high-level language like Python/Matlab with the performance of a fast language like C/C++/Fortran\n",
     "- Julia is designed for scientific computing...\n",
     "  - N-dimensional arrays\n",
     "  - Reproducibility\n",
@@ -943,7 +943,7 @@
     }
    },
    "source": [
-    "To measure the performance of `my_sum`, we'll use the [BenchmarkTools](https://github.com/JuliaCI/BenchmarkTools.jl) package installed earlier. "
+    "To measure the performance of `my_sum`, we'll use the [BenchmarkTools](https://github.com/JuliaCI/BenchmarkTools.jl) package. "
    ]
   },
   {
@@ -1654,6 +1654,32 @@
     }
    },
    "source": [
+    "Functions can be inlined, even into standard library code. The compiler heuristics are often good and you can nudge it using `@inline`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "my_identity(x) = x\n",
+    "my_plus(x, y) = x + y\n",
+    "@btime mapreduce($my_identity, $my_plus, $data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### Types are values\n",
     "\n",
     "Types can also be passed around as values and bound to variables with no special rules. This makes implementing factories or constructors easy:"
@@ -1889,7 +1915,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "We have seen its siblings `@btime` and `@benchmark` above."
    ]
@@ -2254,6 +2284,26 @@
    "source": [
     "# Solving hyperbolic PDEs with Trixi\n",
     "\n",
+    "- First code in January 2020\n",
+    "- Version `v0.1` on GitHub [in August 2020](https://discourse.julialang.org/t/ann-trixi-jl-a-tree-based-numerical-simulation-framework-for-hyperbolic-pdes/45886)\n",
+    "- Version `v0.3` published [in November 2020](https://discourse.julialang.org/t/ann-trixi-jl-v0-3-sciml-integration-and-a-new-modular-approach-for-easy-extension/50419)\n",
+    "- [12 active contributors](https://github.com/trixi-framework/Trixi.jl/graphs/contributors)\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "  <img src=\"media/Authors.png\" width=\"80%\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Quickstart\n",
+    "\n",
     "Let's have a look at a simple 2D example."
    ]
   },
@@ -2549,13 +2599,13 @@
     "semi = SemidiscretizationHyperbolic(mesh_static, equations,\n",
     "                                    cosine_pulse, # <-- here is the new initialization function\n",
     "                                    solver)\n",
-    "\n",
     "# Create and solve ODE problem\n",
     "ode = semidiscretize(semi, (0.0, 1.7));\n",
-    "sol = solve(ode, BS3(), save_everystep=false);\n",
+    "sol = solve(ode, BS3(), saveat=range(ode.tspan..., length=6));\n",
     "\n",
-    "# Plot result\n",
-    "plot(sol)"
+    "using Printf\n",
+    "plot(map(i -> plot(sol.u[i], semi, title=@sprintf(\"\\$ t = %.2f \\$\", sol.t[i])), \n",
+    "        eachindex(sol.t))..., size=(1200, 550))"
    ]
   },
   {
