some minor improvements of the slides

--- a/Talk.ipynb
+++ b/Talk.ipynb
@@ -82,7 +82,6 @@
    "outputs": [],
    "source": [
     "# Display mp4 videos used in the demos\n",
-    "\n",
     "using Base64\n",
     "\n",
     "function display_mp4(filename; relative_width=100, loop=true)\n",
@@ -155,9 +154,7 @@
     "- ...and valuable for general programming\n",
     "  - Growing ecosystem of packages\n",
     "  - Rich type system\n",
-    "- Encourages good software development practices\n",
-    "  - Based on GitHub\n",
-    "  - Tests, CI"
+    "- Encourages good software development practices"
    ]
   },
   {
@@ -796,7 +793,8 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
-    "Pkg.activate(\".\")"
+    "Pkg.activate(\".\")\n",
+    "Pkg.instantiate()"
    ]
   },
   {
@@ -1527,7 +1525,7 @@
     }
    },
    "source": [
-    "# Bonus Features of Julia"
+    "# Bonus features of Julia"
    ]
   },
   {
@@ -1654,7 +1652,7 @@
     }
    },
    "source": [
-    "Functions can be inlined, even into standard library code. The compiler heuristics are often good and you can nudge it using `@inline`."
+    "Functions can be inlined, even into standard library code. The compiler heuristics are often good and you can nudge it using `@inline` if necessary."
    ]
   },
   {
@@ -2106,7 +2104,7 @@
    "source": [
     "## [DifferentialEquations/OrdinaryDiffEq](https://github.com/SciML/DifferentialEquations.jl)\n",
     "\n",
-    "* { ordinary | stochastic | * } differential equations\n",
+    "* { ordinary | delay | stochastic | * } differential equations\n",
     "* Automatic differentiation and sparsity detection\n",
     "* Sensitivity analysis and parameter estimation\n",
     "* Access to pure-Julia solvers and existing C and Fortran solvers\n",
@@ -2720,7 +2718,7 @@
     "\n",
     "# Plot result\n",
     "pd = PlotData2D(sol)\n",
-    "plot(pd, seriescolor=:viridis)\n",
+    "plot(pd, seriescolor=:heat)\n",
     "plot!(getmesh(pd))"
    ]
   },
@@ -3147,7 +3145,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Julia 1.6.0",
    "language": "julia",
