add some skipped cells to free memory on mybinder.org

--- a/Talk.ipynb
+++ b/Talk.ipynb
@@ -277,6 +277,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# to free some memory on mybinder.org\n",
+    "λ = nothing\n",
+    "GC.gc()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1668,6 +1683,22 @@
     "my_identity(x) = x\n",
     "my_plus(x, y) = x + y\n",
     "@btime mapreduce($my_identity, $my_plus, $data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# to free some memory on mybinder.org\n",
+    "data = nothing\n",
+    "points = nothing\n",
+    "GC.gc()"
    ]
   },
   {
